wallet  not completed

--- a/views/admin/couponmanagement.ejs
+++ b/views/admin/couponmanagement.ejs
@@ -28,7 +28,7 @@
       </div>
       <ul class="nav">
         <li class="nav-item menu-items">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/admin/dashboard">
             <span class="menu-title">Dashboard</span>
           </a>
         </li>
