--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -22,7 +22,7 @@
         <a href=""><img src="/images/img/logo/A_logo_with_the_letters_M_and_H_together_with_a_cap_on_M-removebg-preview.png" alt=""></a>
       </div>        
       <% if(isAdmin) { %>
-        <a href="/admin/usermanagement">
+        <a href="/admin/dashboard">
             <img src="/images/img/adminlogo/admip.png" alt="ADMIN" style="width: 65px; height: 61px; position: absolute; top: 3px; left: 277px;">
         </a>
       <% } %>
