--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -27,7 +27,7 @@
         </div>
         <ul class="nav">
           <li class="nav-item menu-items">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/admin/dashboard">
               <span class="menu-title">Dashboard</span>
             </a>
           </li>
@@ -42,7 +42,7 @@
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/admin/ordermanagement">
               <span class="menu-title">Order Management</span>
             </a>
           </li>
