--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -6,28 +6,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Admin Panel</title>
-  <!-- End plugin css for this page -->
-  <!-- inject:css -->
-  <!-- endinject -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://unpkg.com/cropperjs@1.5.12/dist/cropper.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
   <!-- Layout styles -->
   <link rel="stylesheet" href="/css/admin.css">
-  <!-- End layout styles -->
-  <!-- <link rel="shortcut icon" href="assets/images/favicon.png" /> -->
-
-  <style>
-    .pagination {
-      margin-top: 20px;
-    }
-
-    .pagination .page-item.active .page-link {
-      background-color: #007bff;
-      border-color: #007bff;
-    }
-
-    .pagination .page-link {
-      color: #007bff;
-    }
-  </style>
 </head>
 
 <body>
@@ -35,18 +19,18 @@
     <!-- partial:partials/_sidebar.html -->
     <nav class="sidebar sidebar-offcanvas" id="sidebar">
       <div class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top">
-        <a class="sidebar-brand brand-logo" href="#">MEN'S HUB </a>
-        <a class="sidebar-brand brand-logo-mini" href="#"><img src="/images/logo-mini.svg" alt="logo" /></a>
+        <a class="sidebar-brand brand-logo" href="index.html">MEN'S HUB </a>
+        <a class="sidebar-brand brand-logo-mini" href="index.html"><img src="/images/logo-mini.svg" alt="logo" /></a>
         <a href="/home"><img style="width: 30px;height: 30px;" src="/images/img/home-logo/home2.png" alt="To home"></a>
 
       </div>
       <ul class="nav">
-        <li class="nav-item menu-items">
+        <li class="nav-item menu-items forme">
           <a class="nav-link" href="/admin/dashboard">
             <span class="menu-title">Dashboard</span>
           </a>
         </li>
-        <li class="nav-item menu-items forme">
+        <li class="nav-item menu-items">
           <a class="nav-link" href="/admin/usermanagement">
             <span class="menu-title">User Management</span>
           </a>
@@ -78,7 +62,7 @@
         </li>
       </ul>
     </nav>
-    <!-- partial -->
+
     <div class="container-fluid page-body-wrapper">
       <!-- partial:partials/_navbar.html -->
       <nav class="navbar p-0 fixed-top d-flex flex-row">
@@ -91,9 +75,7 @@
             <span class="mdi mdi-menu"></span>
           </button>
           <ul class="navbar-nav w-100">
-            <li class="nav-item w-100">
-
-            </li>
+            <li class="nav-item w-100"></li>
           </ul>
           <ul class="navbar-nav navbar-nav-right">
             <li class="nav-item nav-settings d-none d-lg-block">
@@ -113,31 +95,37 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item preview-item">
                   <div class="preview-thumbnail">
-                    <img src="assets/images/faces/face4.jpg" alt="image" class="rounded-circle profile-pic">
+                    <img src="assets/images/faces/face4.jpg" alt="image" class="rounded-circle profile-pic" />
                   </div>
                   <div class="preview-item-content">
-                    <p class="preview-subject ellipsis mb-1">Mark send you a message</p>
-                    <p class="text-muted mb-0"> 1 Minutes ago </p>
+                    <p class="preview-subject ellipsis mb-1">
+                      Mark send you a message
+                    </p>
+                    <p class="text-muted mb-0">1 Minutes ago</p>
                   </div>
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item preview-item">
                   <div class="preview-thumbnail">
-                    <img src="assets/images/faces/face2.jpg" alt="image" class="rounded-circle profile-pic">
+                    <img src="assets/images/faces/face2.jpg" alt="image" class="rounded-circle profile-pic" />
                   </div>
                   <div class="preview-item-content">
-                    <p class="preview-subject ellipsis mb-1">Cregh send you a message</p>
-                    <p class="text-muted mb-0"> 15 Minutes ago </p>
+                    <p class="preview-subject ellipsis mb-1">
+                      Cregh send you a message
+                    </p>
+                    <p class="text-muted mb-0">15 Minutes ago</p>
                   </div>
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item preview-item">
                   <div class="preview-thumbnail">
-                    <img src="assets/images/faces/face3.jpg" alt="image" class="rounded-circle profile-pic">
+                    <img src="assets/images/faces/face3.jpg" alt="image" class="rounded-circle profile-pic" />
                   </div>
                   <div class="preview-item-content">
-                    <p class="preview-subject ellipsis mb-1">Profile picture updated</p>
-                    <p class="text-muted mb-0"> 18 Minutes ago </p>
+                    <p class="preview-subject ellipsis mb-1">
+                      Profile picture updated
+                    </p>
+                    <p class="text-muted mb-0">18 Minutes ago</p>
                   </div>
                 </a>
                 <div class="dropdown-divider"></div>
@@ -162,7 +150,9 @@
                   </div>
                   <div class="preview-item-content">
                     <p class="preview-subject mb-1">Event today</p>
-                    <p class="text-muted ellipsis mb-0"> Just a reminder that you have an event today </p>
+                    <p class="text-muted ellipsis mb-0">
+                      Just a reminder that you have an event today
+                    </p>
                   </div>
                 </a>
                 <div class="dropdown-divider"></div>
@@ -174,7 +164,7 @@
                   </div>
                   <div class="preview-item-content">
                     <p class="preview-subject mb-1">Settings</p>
-                    <p class="text-muted ellipsis mb-0"> Update dashboard </p>
+                    <p class="text-muted ellipsis mb-0">Update dashboard</p>
                   </div>
                 </a>
                 <div class="dropdown-divider"></div>
@@ -186,7 +176,7 @@
                   </div>
                   <div class="preview-item-content">
                     <p class="preview-subject mb-1">Launch Admin</p>
-                    <p class="text-muted ellipsis mb-0"> New admin wow! </p>
+                    <p class="text-muted ellipsis mb-0">New admin wow!</p>
                   </div>
                 </a>
                 <div class="dropdown-divider"></div>
@@ -231,95 +221,166 @@
         </div>
       </nav>
       <!-- partial -->
-      <div class="row p-3">
-        <div class="col-12 grid-margin">
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Order Status</h4>
-              <div class="table-responsive">
-                <form class="nav-link mt-2 mt-md-0  d-lg-flex search">
-                  <input type="text" class="form-control" placeholder="Search users">
-                  <button style="height: 33px;margin: 3px 0px 0px 10px;" class="btn btn-primary">Search</button>
-                </form>
-                <table class="table" style="color: white;">
-                  <thead>
-                    <tr>
-                      <th style="color: white; "> USERNAME</th>
-                      <th style="color: white; "> EMAIL</th>
-                      <th style="color: white; "> BAN </th>
-                      <th style="color: white; "> VIEW</th>
-
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <% user.forEach((value)=> { %>
-                      <% if(value.role==='user' ){ %>
-                        <tr>
-                          <td>
-                            <%= value.userName %>
-                          </td>
-                          <td>
-                            <%= value.email %>
-                          </td>
-                          <td>
-                            <button style="background-color: transparent;" data-id="<%= value._id  %>"
-                              class="badge <%= value.isDeleted?'badge-outline-primary':'badge-outline-danger' %> btn-ban">
-                              <%= value.isDeleted?'Unban':'Ban' %>
-                            </button>
-                          </td>
-                          <td>
-                            <button style="background-color: transparent;" data-id="<%= value.email  %>"
-                              class="badge badge-outline-warning btn-view" >View</button>
-                          </td>
-                        </tr>
-                        <% } %>
-                          <% }); %>
-                  </tbody>
-                </table>
+      <div class="main-panel">
+        <div class="content-wrapper">
+          <div class="row">
+            <div class="col-12 grid-margin stretch-card">
+              <div class="card corona-gradient-card"></div>
+            </div>
+          </div>
+          <div class="col-md-12 grid-margin stretch-card">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title text-center mb-4">Generate Report</h4>
+                <div class="d-flex justify-content-center mb-4">
+                  <button class="btn btn-outline-primary mx-2 btnDateRange" data-range="daily">
+                    Daily
+                  </button>
+                  <button class="btn btn-outline-primary mx-2 btnDateRange" data-range="weekly">
+                    Weekly
+                  </button>
+                  <button class="btn btn-outline-primary mx-2 btnDateRange" data-range="monthly">
+                    Monthly
+                  </button>
+                  <button class="btn btn-outline-primary mx-2 btnDateRange" data-range="custom">
+                    Custom Date
+                  </button>
+                </div>
+                <div id="customDateInputs" class="inputSet mt-4" style="display: none">
+                  <div class="row">
+                    <div class="col-md-6 mb-3">
+                      <label for="start-date" class="form-label">Start Date:</label>
+                      <input type="date" id="start-date" class="form-control" />
+                    </div>
+                    <div class="col-md-6 mb-3">
+                      <label for="end-date" class="form-label">End Date:</label>
+                      <input type="date" id="end-date" class="form-control" />
+                    </div>
+                  </div>
+                  <div class="text-center">
+                    <!-- <button id="custom-download-btn" class="btn btn-primary">Download Custom Report</button> -->
+                  </div>
+                </div>
+                <div class="text-center mt-3">
+                  <button id="download-btn" class="btn btn-success btnDownloadPdf">
+                    Download Report
+                  </button>
+                </div>
+                <div id="error-msg" class="error text-danger text-center mt-3"></div>
+              </div>
+            </div>
+          </div>
+          <div class="dashboardData">
+            <div class="row">
+              <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-9">
+                        <div class="d-flex align-items-center align-self-start">
+                          <h3 class="mb-0">3002</h3>
+                        </div>
+                      </div>
+                    </div>
+                    <h6 class="text-muted font-weight-normal">Totel Users</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-9">
+                        <div class="d-flex align-items-center align-self-start">
+                          <h3 class="mb-0">266</h3>
+                        </div>
+                      </div>
+                    </div>
+                    <h6 class="text-muted font-weight-normal">
+                      Totel Products
+                    </h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-9">
+                        <div class="d-flex align-items-center align-self-start">
+                          <h3 class="mb-0">66</h3>
+                        </div>
+                      </div>
+                    </div>
+                    <h6 class="text-muted font-weight-normal">
+                      Totel Orders
+                    </h6>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-9">
+                        <div class="d-flex align-items-center align-self-start">
+                          <h3 class="mb-0">277</h3>
+                        </div>
+                      </div>
+                    </div>
+                    <h6 class="text-muted font-weight-normal">
+                      Weekly Sales
+                    </h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 grid-margin stretch-card">
+              <div class="card">
+                <div class="card">
+                  <div class="card-body">
+                    <div>
+                      <h3>Top-Selling Products</h3>
+                      <canvas id="topSellingChart"></canvas>
+                    </div>
+                    <div>
+                      <h3>Top-Selling Categories</h3>
+                      <canvas id="topSellingCategoriesChart"></canvas>
+                    </div>
+                    <div>
+                      <h3>Top-Selling Brands</h3>
+                      <canvas id="topSellingBrandsChart"></canvas>
+                    </div>
+                    <div>
+                      <h3>Site visitors</h3>
+                      <canvas id="lineChartWithDots"></canvas>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <!-- content-wrapper ends -->
       </div>
-      <div style="margin-top:100px ;" class="col-md-4 grid-margin stretch-card userInfoView">
-
-      </div>
+      <!-- main-panel ends -->
     </div>
-    <!-- main-panel ends -->
-  </div>
-  <nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center">
-      <% if (currentPage> 1) { %>
-        <li class="page-item">
-          <a class="page-link" href="?page=<%= currentPage - 1 %>" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
-        </li>
-        <% } %>
 
-          <% for (let i=1; i <=totalPages; i++) { %>
-            <li class="page-item <%= i === currentPage ? 'active' : '' %>">
-              <a class="page-link" href="?page=<%= i %>">
-                <%= i %>
-              </a>
-            </li>
-            <% } %>
 
-              <% if (currentPage < totalPages) { %>
-                <li class="page-item">
-                  <a class="page-link" href="?page=<%= currentPage + 1 %>" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                  </a>
-                </li>
-                <% } %>
-    </ul>
-  </nav>
-  <!-- page-body-wrapper ends -->
-  </div>
 
-  <!-- Custom js for this page -->
-  <script src="/js/admin/usermanagement.js"></script>
-  <!-- End custom js for this page -->
-</body>
+    <script src="https://unpkg.com/cropperjs@1.5.12/dist/cropper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom js for this page -->
+    <script src="/js/admin/dashboard.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-map"></script>
+    <!-- End custom js for this page -->
+
+    
+
+
+  </body>
 
 </html>
