--- a/views/users/thankyou.ejs
+++ b/views/users/thankyou.ejs
@@ -78,7 +78,7 @@
             <h2 class="display-3 text-black">Thank you!</h2>
             <p class="lead mb-5">You order was successfuly completed.</p>
             <p>
-              <a href="/shop" class="btn btn-sm btn-outline-black"
+              <a href="/shop" class="btn" style="background-color: #FFAB00; color: black; font-weight: bold;"
                 >Back to shop</a
               >
             </p>
